# rust-axum-starter

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
