[package]
name = "rust-axum-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["tracing"] }
clap = { version = "4.4", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
metrics = { version = "0.21" }
metrics-exporter-prometheus = { version = "0.12" }
tokio = { version = "1.32", features = ["full"] }